# vire

./: .gitignore  ChangeLog  Makefile.am  README.md  configure.ac
conf/: vire.conf
dep/: .gitignore  Makefile.am  jemalloc-4.2.0.tar.bz2
dep/ae/: Makefile.am  ae.c  ae.h  ae_epoll.c  ae_evport.c  ae_kqueue.c  ae_select.c
dep/darray/: Makefile.am  darray.c  darray.h
dep/dhashkit/: Makefile.am  dcrc16.c  dcrc32.c  dcrc64.c  dfnv.c  dhashkit.h  dhsieh.c  djenkins.c  dketama.c  dmd5.c  dmodula.c  dmurmur.c  done_at_a_time.c  drandom.c  dsha1.c
dep/dhashtable/: Makefile.am  dhashtable.c  dhashtable.h  dhashtable1.c  dhashtable1.h
dep/dlist/: Makefile.am  dlist.c  dlist.h  dlocklist.c  dlocklist.h  dlockqueue.c  dlockqueue.h  dmtlist.c  dmtlist.h  dmtqueue.c  dmtqueue.h
dep/dmalloc/: Makefile.am  dmalloc.c  dmalloc.h
dep/hashkit/: Makefile.am  vr_crc32.c  vr_hashkit.h  vr_jenkins.c  vr_ketama.c  vr_md5.c  vr_modula.c  vr_murmur.c
dep/himemcached-0.1.0/: Makefile.am  himcread.c  himcread.h  himemcached.c  himemcached.h
dep/sds/: Makefile.am  sds.c  sds.h  sdsalloc.h
dep/util/: Makefile.am  dlog.c  dlog.h  dspecialconfig.h  dutil.c  dutil.h
src/: Makefile.am  vr.c  vr_aof.c  vr_aof.h  vr_array.c  vr_array.h  vr_backend.c  vr_backend.h  vr_bitops.c  vr_bitops.h  vr_block.c  vr_block.h  vr_client.c  vr_client.h  vr_command.c  vr_command.h  vr_conf.c  vr_conf.h  vr_connection.c  vr_connection.h  vr_core.c  vr_core.h  vr_db.c  vr_db.h  vr_dict.c  vr_dict.h  vr_eventloop.c  vr_eventloop.h  vr_hyperloglog.c  vr_hyperloglog.h  vr_intset.c  vr_intset.h  vr_list.c  vr_list.h  vr_listen.c  vr_listen.h  vr_log.c  vr_log.h  vr_lzf.h  vr_lzfP.h  (+58 more)
src/ae/: Makefile.am  ae.c  ae_epoll.c  ae_evport.c
src/hashkit/: Makefile.am  vr_crc16.c  vr_fnv.c  vr_hsieh.c  vr_one_at_a_time.c  vr_random.c  vr_sha1.c
tests/: .gitignore  Makefile.am  vrabtest.c  vrabtest.h  vrt_backend.c  vrt_backend.h  vrt_benchmark.c  vrt_check_data.c  vrt_check_data.h  vrt_dispatch_data.c  vrt_dispatch_data.h  vrt_produce_data.c  vrt_produce_data.h  vrt_public.c  vrt_public.h  vrt_simple.c  vrt_simple.h  vrt_util.c  vrt_util.h  vrtest.c
