MAINTAINERCLEANFILES = Makefile.in

AM_CFLAGS = -Wall -Wshadow
AM_CFLAGS += -Wno-unused-parameter -Wno-unused-value

noinst_LIBRARIES = libdhashkit.a

noinst_HEADERS = dhashkit.h

libdhashkit_a_SOURCES =	\
	dhashkit.h		    \
	dcrc16.c			\
	dcrc32.c			\
	dfnv.c			    \
	dhsieh.c			\
	djenkins.c		    \
	dketama.c			\
	dmd5.c			    \
	dmodula.c			\
	dmurmur.c			\
	done_at_a_time.c	\
	drandom.c			\
	dsha1.c