MAINTAINERCLEANFILES = Makefile.in

AM_CFLAGS = -Wall -Wshadow
AM_CFLAGS += -Wno-unused-parameter -Wno-unused-value

noinst_LIBRARIES = libdlist.a

noinst_HEADERS = dlist.h dmtlist.h dlocklist.h

libdlist_a_SOURCES =	        \
	dlist.c dlist.h             \
    dmtlist.c dmtlist.h         \
    dlocklist.c dlocklist.h