MAINTAINERCLEANFILES = Makefile.in

AM_CFLAGS = -Wall -Wshadow
AM_CFLAGS += -Wno-unused-parameter -Wno-unused-value

noinst_LIBRARIES = libdlist.a

noinst_HEADERS = dlist.h dmtqueue.h dlockqueue.h

libdlist_a_SOURCES =	            \
	dlist.c dlist.h             \
    dmtqueue.c dmtqueue.h           \
    dlockqueue.c dlockqueue.h